--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,12 @@ services:
     ports:
       - 5050:5000
     
-
   checkout-service:
     build:
       context: ./checkout-service
       dockerfile: Dockerfile
+    ports:
+      - 5051:5000
 
   frontend:
     build:
