update python services env

--- a/email-service/Dockerfile
+++ b/email-service/Dockerfile
@@ -1,5 +1,7 @@
 FROM python:3.12.0-slim-bookworm
 
+ENV MIDDLEWARE_CONFIG_FILE=./middleware.ini
+
 # Create a user called "flasky"
 RUN useradd -ms /bin/bash flasky
 
@@ -19,4 +21,4 @@ RUN chown -R flasky:flasky /app
 USER flasky
 
 # Run server.py using gunicorn
-CMD ["MIDDLEWARE_CONFIG_FILE=./middleware.ini", "middleware-apm", "run", "gunicorn", "-b", "0.0.0.0:5000", "server:app"]
+CMD ["middleware-apm", "run", "gunicorn", "-b", "0.0.0.0:5000", "server:app"]
