--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       dockerfile: Dockerfile
     ports:
       - 5050:5000
+    network_mode: bridge
 
   cart-service:
     environment:
@@ -34,6 +35,7 @@ services:
       dockerfile: Dockerfile
     ports:
       - 5051:5000
+    network_mode: bridge
 
   frontend:
     build:
@@ -41,6 +43,7 @@ services:
       dockerfile: Dockerfile
     ports:
       - 5052:80
+    network_mode: bridge
 
   mongodb:
     image: mongo
